# fakturownia

./: .gitignore  pyproject.toml
src/fakturownia/: app.py  database.py  forms.py
src/fakturownia/templates/: buyers.html  create.html  index.html  invoices.html  sellers.html  user.html
src/fakturownia/views/: __init__.py  buyers.py  home.py  invoices.py  sellers.py  users.py
