[tool.poetry]
name = "fakturownia"
version = "0.1.0"
description = ""
authors = ["kaczmprz <kaczmprz@gmail.com>"]
readme = "README.md"
packages = [{include = "fakturownia", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
