[tool.poetry]
name = "fakturownia"
version = "0.1.0"
description = ""
authors = ["kaczmprz <kaczmprz@gmail.com>"]
readme = "README.md"
packages = [{include = "fakturownia", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
sphinx = "^6.1.3"
flask-sqlalchemy = "^3.0.3"
flask-wtf = "^1.1.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.1"
flake8 = "^6.0.0"
tox = "^4.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
